--- a/Todo.Tests/Todo.Tests.csproj
+++ b/Todo.Tests/Todo.Tests.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TodoControllerTest.cs" />
+    <Compile Include="MainControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
